# beaglebone-thesis

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md  mac.txt
Bluetooth/: CMakeLists.txt  blescan.c  cli.c  data.c  main.c
Bluetooth/include/: blescan.h  cli.h  data.h
Plotting/: app.py  data.txt  script,plt  script.plt
Webserver/: app.js  index.html  index.js
include/: blescan.h  cli.h  data.h
src/: blescan.c  cli.c  data.c  main.c
